@@ -1,3 +1,6 @@
+Sep 30, 2019
+  term stats loader: simplified code
+
 Sep 20, 2019
   added script check_for_cycles.sh
 
